syntax = "proto3";

package models;

message SignUpRequest {
  string name = 1;
  string phone = 2;
  string email = 3;
  string password = 4;
  string passwordConfirm = 5;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  int32 id = 1;
}

message SignInResponse {
  string token = 1;
}

message RestorePasswordRequest {
  string email = 1;
}

message RestorePasswordResponse {
  string status = 1;
}

message ChangePasswordRequest {
  string token = 1;
  string password = 2;
  string passwordConfirm = 3;
}

message ChangePasswordResponse {
  string status = 1;
}

message ChangePhoneRequest {
  string token = 1;
  string phone = 2;
}

message ChangePhoneResponse {
  string status = 1;
}

message GetUserInfoRequest {
  string token = 1;
}

message GetUserInfoResponse {
  string name = 1;
  string phone = 2;
  string email = 3;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string token = 1;
}

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  rpc  RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc RestorePassword (RestorePasswordRequest) returns (RestorePasswordResponse) {}
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {}
  rpc ChangePhone (ChangePhoneRequest) returns (ChangePhoneResponse) {}
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}